--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,68 @@
-appdirs==1.4.3
-asgiref==3.2.4
-astroid==2.3.3
-certifi==2020.4.5.1
-cffi==1.14.0
+appdirs==1.4.4
+asgiref==3.2.10
+astroid==2.4.2
+certifi==2020.6.20
+cffi==1.14.3
 chardet==3.0.4
 colorama==0.4.3
-cryptography==2.9
+cryptography==3.2.1
 defusedxml==0.6.0
-diff-match-patch==20181111
-distlib==0.3.0
-Django==3.0.4
-django-admin-interface==0.12.2
+diff-match-patch==20200713
+distlib==0.3.1
+Django==3.1.2
+django-admin-interface==0.14.0
 django-bootstrap-form==3.4
-django-colorfield==0.3.0
-django-cors-headers==3.2.1
+django-colorfield==0.3.2
+django-cors-headers==3.5.0
 django-debug-toolbar==2.2
-django-filter==2.2.0
+django-extensions==3.0.9
+django-filter==2.4.0
 django-flat-responsive==2.0
 django-flat-theme==1.1.4
-django-grappelli==2.14.1
-django-import-export==2.0.2
-django-material==1.6.3
-django-sql-explorer==1.1.3
-djangorestframework==3.11.0
+django-grappelli==2.14.2
+django-import-export==2.4.0
+django-material==1.7.1
+django-sql-explorer==2.0
+django-stdimage==5.1.1
+django-taggit==1.3.0
+djangorestframework==3.12.1
 easy-thumbnails==2.7
 et-xmlfile==1.0.1
 filelock==3.0.12
-idna==2.9
-isort==4.3.21
+idna==2.10
+isort==5.5.4
 jdcal==1.4.1
 lazy-object-proxy==1.4.3
 MarkupPy==1.14
 mccabe==0.6.1
+oauthlib==3.1.0
 odfpy==1.4.1
-openpyxl==3.0.3
+openpyxl==3.0.5
+paypalhttp==1.0.0
 paypalrestsdk==1.13.1
-Pillow==7.0.0
+Pillow==8.0.1
+progressbar2==3.53.1
 pycparser==2.20
-pylint==2.4.4
-PyMySQL==0.9.3
+PyJWT==1.7.1
+pylint==2.6.0
+PyMySQL==0.10.1
 pyOpenSSL==19.1.0
-pytz==2019.3
+python-utils==2.4.0
+python3-openid==3.2.0
+pytz==2020.1
 PyYAML==5.3.1
-requests==2.23.0
+requests==2.24.0
+requests-oauthlib==1.3.0
 rjsmin==1.1.0
-six==1.14.0
-sqlparse==0.3.1
-tablib==1.1.0
+six==1.15.0
+social-auth-app-django==4.0.0
+social-auth-core==3.3.3
+sqlparse==0.4.1
+tablib==2.0.0
+toml==0.10.1
 unicodecsv==0.14.1
-urllib3==1.25.9
-virtualenv==20.0.17
-wrapt==1.11.2
+urllib3==1.25.11
+virtualenv==20.1.0
+wrapt==1.12.1
 xlrd==1.2.0
 xlwt==1.3.0
